# video-summarization

./: .gitignore  README.md  pyproject.toml
notebooks/: train.ipynb
results/: bert_score_final.md
src/: main.py
src/preprocessing/: get_data.py  process.py  processTranscript.py  process_transcript.py  test_pipeline.py
