[project]
name = "video-summarization"
version = "0.1.0"
description = "Video summarization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "camel-tools>=1.5.7",
    "torch>=2.12.0",
    "transformers>=4.43.4",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [ { index = "pytorch-cu126" } ]
